monica/monica/monica-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monica-server
  namespace: monica
  labels:
    app: monica
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: monica-server-pod
  template:
    metadata:
      labels:
        pod-label: monica-server-pod
    spec:
      nodeName: node2
      containers:
      - name: monica
        image: monica:latest
        volumeMounts:
        - name: server-storage
          mountPath: /var/www/monica/storage
          subPath: server-data
      volumes:
      - name: server-storage
        hostPath:
          path: /data/monica/
---
apiVersion: v1
kind: Service
metadata:
  name: monica-server
  namespace: monica
  labels:
    app: monica
spec:
  selector:
    pod-label: monica-server-pod
  ports:
  - protocol: TCP
    port: 80
