monica/monica/monica-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: monica
  namespace: monica
spec:
  rules:
  - host: monica.k8s.fit
    http:
      paths:
      - path: /
        backend:
          serviceName: monica-server
          servicePort: 80
